css/nanny.css
/*nanny styles*/
.info{
    min-height: 20px;
    max-height: 150px;
    overflow-y: auto;
	padding: 19px;
	margin-bottom: 20px;
}
.children{
	padding-top: 20px;
}
.children h2{
	margin-top: 10px;
}
.children i{
	margin-top: 10%;
}
.container-completed{
	max-height: 360px;
	overflow-y: auto;
}
.relative{
	position: relative;
}
.children-actions {
	max-height: 660px;
	overflow-y: auto;
}
.notes-child{
	min-height: 85px;
}
.top-tabs {
    border: 1px solid #8dc63f;    
    border-radius: 0 5px 5px 5px;
    padding: 15px;
    min-height: 190px;
 	overflow-y: auto;
}
/*end nanny styles*/

